[package]
name = "evalb"
version = "0.0.0"
authors = ["Ben Weedon <ben.weedon@outlook.com>"]
description = "A rust reimplementation of the evalb tool"
repository = "https://github.com/benweedon/evalb"
readme = "README.md"
keywords = ["nlp", "linguistics", "scoring"]
categories = ["parsing"]
license = "GPL-3.0"

[dependencies]
clap = { version = "2.30.0", features = ["yaml"] }
